add: paging system

--- a/style.css
+++ b/style.css
@@ -8,8 +8,13 @@ h1 {
 	text-align: center;
 }
 
-div {
+section {
 	margin: 100px 0;
+	display: none;
+}
+
+.currentPage {
+	display: block;
 }
 
 p {
